updated search and ban times

--- a/roles/fail2ban/templates/sshd.conf
+++ b/roles/fail2ban/templates/sshd.conf
@@ -3,8 +3,8 @@
 [sshd]
 enabled  = true
 action   = iptables[chain=INPUT, protocol=tcp, port=2222, name=sshd]
-maxRetry = 3
-findtime = 600
-bantime  = 900
+maxRetry = 5
+findtime = 31536000
+bantime  = 31536000
 port     = {{sshd_port}}
 
